--- a/Page/src/css/styles.css
+++ b/Page/src/css/styles.css
@@ -6,6 +6,7 @@ body {
   font-family: LatoBlack;
   background-color: #333;
   min-width: 500px;
+  width: 100%;
 }
 #loaderImg {
   display: block;
